# amaranth-to-litex

./: .gitignore  README.md  pyproject.toml  setup.py
amaranth_to_litex/: __init__.py
amaranth_to_litex/wrapper/: litex.py
examples/: amaranth_to_litex.py  counter.py  simple.py  usb.py
gateware/cores/: counter.py
gateware/interface/: stream.py
gateware/wrapper/: litex.py
